// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/Body NoViolations smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-identity">
                      <div class="keys lookup-info">
                        <div>
                          Plate:
                        </div>
                        <div>
                          State:
                        </div>
                        <div>
                          Plate type:
                        </div>
                        <div>
                          Lookups:
                        </div>
                        <div>
                          Queried On:
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div>
                          ABC1234
                        </div>
                        <div class="region">
                          <div class="region-abbreviation">
                            NY
                          </div>
                        </div>
                        <div>
                          All
                        </div>
                        <div>
                          2
                        </div>
                        <div>
                          09/01/2025
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box ">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-secondary"
                              disabled
                              type="button"
                      >
                        no violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Body ViolationsListHidden smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-identity">
                      <div class="keys lookup-info">
                        <div>
                          Plate:
                        </div>
                        <div>
                          State:
                        </div>
                        <div>
                          Plate type:
                        </div>
                        <div>
                          Lookups:
                        </div>
                        <div>
                          Queried On:
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div>
                          ABC1234
                        </div>
                        <div class="region">
                          <div class="region-abbreviation">
                            NY
                          </div>
                        </div>
                        <div>
                          All
                        </div>
                        <div>
                          2
                        </div>
                        <div>
                          09/01/2025
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box ">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Type:
                          </div>
                          <div class="violation-count-aspect">
                            Parking:
                          </div>
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Borough:
                          </div>
                          <div class="violation-count-aspect">
                            Brooklyn:
                          </div>
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          3
                        </div>
                        <div class="violation-type-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                        <div class="violation-borough-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-fines">
                      <div class="keys lookup-info">
                        <div>
                          Fined:
                        </div>
                        <div>
                          Reduced:
                        </div>
                        <div class="fines-reduced">
                          Paid:
                        </div>
                        <div>
                          Owed:
                        </div>
                      </div>
                      <div class="values lookup-info"
                           role="math"
                           aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                      >
                        <div class="math-symbols">
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div class="fines-reduced">
                            –&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                        </div>
                        <div class="amounts">
                          <div>
                            $3,850.00
                          </div>
                          <div>
                            $20.00
                          </div>
                          <div class="fines-reduced">
                            $3,780.00
                          </div>
                          <div>
                            $50.00
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        show 3 violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Body ViolationsListHiddenWithDangerousVehicleAbatementAct smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-identity">
                      <div class="keys lookup-info">
                        <div>
                          Plate:
                        </div>
                        <div>
                          State:
                        </div>
                        <div>
                          Plate type:
                        </div>
                        <div>
                          Lookups:
                        </div>
                        <div>
                          Queried On:
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div>
                          ABC1234
                        </div>
                        <div class="region">
                          <div class="region-abbreviation">
                            NY
                          </div>
                        </div>
                        <div>
                          All
                        </div>
                        <div>
                          2
                        </div>
                        <div>
                          09/01/2025
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box ">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Type:
                          </div>
                          <div class="violation-count-aspect">
                            Parking:
                          </div>
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Borough:
                          </div>
                          <div class="violation-count-aspect">
                            Brooklyn:
                          </div>
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          3
                        </div>
                        <div class="violation-type-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                        <div class="violation-borough-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-fines">
                      <div class="keys lookup-info">
                        <div>
                          Fined:
                        </div>
                        <div>
                          Reduced:
                        </div>
                        <div class="fines-reduced">
                          Paid:
                        </div>
                        <div>
                          Owed:
                        </div>
                      </div>
                      <div class="values lookup-info"
                           role="math"
                           aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                      >
                        <div class="math-symbols">
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div class="fines-reduced">
                            –&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                        </div>
                        <div class="amounts">
                          <div>
                            $3,850.00
                          </div>
                          <div>
                            $20.00
                          </div>
                          <div class="fines-reduced">
                            $3,780.00
                          </div>
                          <div>
                            $50.00
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="dangerous-vehicle-notice list-group-item list-group-item-warning "
                data-testid="dangerous-vehicle-abatement-act-notice"
            >
              <p>
                Under the
                <a target="_blank"
                   rel="noopener noreferrer"
                   href="https://legistar.council.nyc.gov/LegislationDetail.aspx?ID=3521908&amp;GUID=A4FD4CFC-8AD8-4130-AA92-11BC56936F6D#:~:text=The%20bill%20will%20create%20a,Department%20of%20Transportation%20(DOT)."
                >
                  Dangerous Vehicle Abatement Act
                </a>
                &nbsp;this vehicle could have been booted or impounded for:
              </p>
              <ul>
                <li>
                  <span class="streak-count-and-type text-bg-warning">
                    <span class="streak-count">
                      7
                    </span>
                    red light camera violations
                  </span>
                  <span class="streak-threshold">
                    &nbsp;(&gt;= 5/year)
                  </span>
                  <span>
                    &nbsp;from 06/27/2023 to 05/06/2024
                  </span>
                </li>
              </ul>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        show 3 violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Body ViolationsListVisible smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-identity">
                      <div class="keys lookup-info">
                        <div>
                          Plate:
                        </div>
                        <div>
                          State:
                        </div>
                        <div>
                          Plate type:
                        </div>
                        <div>
                          Lookups:
                        </div>
                        <div>
                          Queried On:
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div>
                          ABC1234
                        </div>
                        <div class="region">
                          <div class="region-abbreviation">
                            NY
                          </div>
                        </div>
                        <div>
                          All
                        </div>
                        <div>
                          2
                        </div>
                        <div>
                          09/01/2025
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box ">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Type:
                          </div>
                          <div class="violation-count-aspect">
                            Parking:
                          </div>
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Borough:
                          </div>
                          <div class="violation-count-aspect">
                            Brooklyn:
                          </div>
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          3
                        </div>
                        <div class="violation-type-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                        <div class="violation-borough-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-fines">
                      <div class="keys lookup-info">
                        <div>
                          Fined:
                        </div>
                        <div>
                          Reduced:
                        </div>
                        <div class="fines-reduced">
                          Paid:
                        </div>
                        <div>
                          Owed:
                        </div>
                      </div>
                      <div class="values lookup-info"
                           role="math"
                           aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                      >
                        <div class="math-symbols">
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div class="fines-reduced">
                            –&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                        </div>
                        <div class="amounts">
                          <div>
                            $3,850.00
                          </div>
                          <div>
                            $20.00
                          </div>
                          <div class="fines-reduced">
                            $3,780.00
                          </div>
                          <div>
                            $50.00
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      3 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th data-testid="table-header-date"
                            aria-sort="ascending"
                            class="sort-column"
                        >
                          <span>
                            Date
                          </span>
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th data-testid="table-header-kind"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Violation
                          </span>
                        </th>
                        <th data-testid="table-header-location"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Location
                          </span>
                        </th>
                        <th data-testid="table-header-fined"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Fines
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2024"
                      >
                        <th colspan="1">
                          2024
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127606"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127607"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127608"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Body ViolationsListVisibleWithDangerousVehicleAbatementAct smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-identity">
                      <div class="keys lookup-info">
                        <div>
                          Plate:
                        </div>
                        <div>
                          State:
                        </div>
                        <div>
                          Plate type:
                        </div>
                        <div>
                          Lookups:
                        </div>
                        <div>
                          Queried On:
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div>
                          ABC1234
                        </div>
                        <div class="region">
                          <div class="region-abbreviation">
                            NY
                          </div>
                        </div>
                        <div>
                          All
                        </div>
                        <div>
                          2
                        </div>
                        <div>
                          09/01/2025
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box ">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Type:
                          </div>
                          <div class="violation-count-aspect">
                            Parking:
                          </div>
                        </div>
                        <div class="violation-count-aspects">
                          <div class="violation-count-aspect-header">
                            Borough:
                          </div>
                          <div class="violation-count-aspect">
                            Brooklyn:
                          </div>
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          3
                        </div>
                        <div class="violation-type-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                        <div class="violation-borough-counts">
                          <div class="violation-count">
                            &nbsp;
                          </div>
                          <div class="violation-count">
                            3
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-fines">
                      <div class="keys lookup-info">
                        <div>
                          Fined:
                        </div>
                        <div>
                          Reduced:
                        </div>
                        <div class="fines-reduced">
                          Paid:
                        </div>
                        <div>
                          Owed:
                        </div>
                      </div>
                      <div class="values lookup-info"
                           role="math"
                           aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                      >
                        <div class="math-symbols">
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                          <div class="fines-reduced">
                            –&nbsp;
                          </div>
                          <div>
                            &nbsp;&nbsp;&nbsp;
                          </div>
                        </div>
                        <div class="amounts">
                          <div>
                            $3,850.00
                          </div>
                          <div>
                            $20.00
                          </div>
                          <div class="fines-reduced">
                            $3,780.00
                          </div>
                          <div>
                            $50.00
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="dangerous-vehicle-notice list-group-item list-group-item-warning "
                data-testid="dangerous-vehicle-abatement-act-notice"
            >
              <p>
                Under the
                <a target="_blank"
                   rel="noopener noreferrer"
                   href="https://legistar.council.nyc.gov/LegislationDetail.aspx?ID=3521908&amp;GUID=A4FD4CFC-8AD8-4130-AA92-11BC56936F6D#:~:text=The%20bill%20will%20create%20a,Department%20of%20Transportation%20(DOT)."
                >
                  Dangerous Vehicle Abatement Act
                </a>
                &nbsp;this vehicle could have been booted or impounded for:
              </p>
              <ul>
                <li>
                  <span class="streak-count-and-type text-bg-warning">
                    <span class="streak-count">
                      7
                    </span>
                    red light camera violations
                  </span>
                  <span class="streak-threshold">
                    &nbsp;(&gt;= 5/year)
                  </span>
                  <span>
                    &nbsp;from 06/27/2023 to 05/06/2024
                  </span>
                </li>
              </ul>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      3 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th data-testid="table-header-date"
                            aria-sort="ascending"
                            class="sort-column"
                        >
                          <span>
                            Date
                          </span>
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th data-testid="table-header-kind"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Violation
                          </span>
                        </th>
                        <th data-testid="table-header-location"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Location
                          </span>
                        </th>
                        <th data-testid="table-header-fined"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Fines
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2024"
                      >
                        <th colspan="1">
                          2024
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127603"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127604"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127605"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
